<resources>
    <string name="app_name">ApoonTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select">Select</string>
    <string name="no_location_added">No Location Added</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="city">City</string>
    <string name="help">Help</string>
    <string name="no_favorite_added">No Favorite Address added</string>
    <string name="city_info_temp"><![CDATA[City Info & Temparature]]></string>
    <string name="citi_info">City Information</string>
    <string name="todays_forecast">Today\'s Forecast</string>
    <string name="temparature">Temparature</string>
    <string name="min_temparature">Min Temparature</string>
    <string name="max_temparature">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="city_name">City</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="no_internet">No internet connection!</string>
    <string name="settings">Settings</string>
    <string name="back_again_to_exit">Please click BACK again to exit</string>
</resources>